<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string-array name="math_symbols">
        <item>+</item>
        <item>-</item>
        <item>x</item>
        <item>/</item>
    </string-array>
    <string name="title_activity_better_calculate_design">BetterCalculateDesign</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="OutPutText">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_p">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_mi">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_mu">x</string>
    <string name="_d">/</string>
    <string name="_e">=</string>
    <string name="_do">.</string>
    <string name="_0">0</string>
    <string name="show_fancy">show fancy</string>
</resources>
